# rag-sample

./: .coverage  .env.sample  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
docs/: implementation-plan.md  mcp-server-implementation-plan.md  multimodal-rag-implementation-plan.md  overview.md  unit-test-plan.md  vector-database-guide.md  vector-db-migration-plan.md  web-ui-implementation-plan.md
src/: cli.py
src/commands/: __init__.py  config.py  document.py  query.py
src/mcp/: __init__.py  handlers.py  resources.py  server.py  server_sse.py  tools.py
src/models/: __init__.py  document.py
src/rag/: __init__.py  document_processor.py  embeddings.py  engine.py  image_processor.py  multimodal_engine.py  vector_store.py  vision_embeddings.py
src/rag/vector_store/: __init__.py  base.py  chroma_store.py  factory.py  qdrant_store.py
src/services/: __init__.py  document_service.py  file_utils.py
src/utils/: config.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample.md  sample.txt
tests/integration/: __init__.py  test_full_rag_flow.py  test_image_search.py  test_multimodal_rag.py  test_multimodal_search.py  test_ollama_integration.py  test_vector_stores.py
tests/unit/: __init__.py  test_config.py  test_document_processor.py  test_document_service.py  test_embeddings.py  test_engine.py  test_file_utils.py  test_image_processor.py  test_models.py  test_multimodal_engine.py  test_vector_store.py  test_vision_embeddings.py
