[project]
name = "rag-sample"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) CLI Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.1",
    "click>=8.3.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
]

[project.scripts]
rag = "src.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
